@@ -1,3 +1,8 @@
+2009-05-21  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* gdb.dwarf2/dw2-strp.exp (p a_string2, ptype a_string2): New.
+	* gdb.dwarf2/dw2-strp.S (a_string2): New.
+
 2009-05-18  Jon Beniston <jon@beniston.com>
 
         * gdb.asm/asm-source.exp: Add lm32 target.
